--- a/ee/admin-server/public/_panel/index.html
+++ b/ee/admin-server/public/_panel/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
-		<link rel="icon" type="image/svg+xml" href="../logo.svg">
-		<title>Contember Admin Panel</title>
-		<script id="contember-config" type="application/json">{configuration}</script>
-		<script type="module" src="./main.tsx"></script>
-	</head>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
+	<link rel="icon" type="image/png" href="../favicon.png">
+	<link rel="apple-touch-icon" href="../apple-touch-icon.png">
+	<title>Contember Admin Panel</title>
+	<script id="contember-config" type="application/json">{configuration}</script>
+	<script type="module" src="./main.tsx"></script>
+</head>
+
 </html>
