--- a/packages/admin-sandbox/admin/index.html
+++ b/packages/admin-sandbox/admin/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
-		<link rel="icon" type="image/svg+xml" href="./logo.svg">
-		<title>Contember Admin Sandbox</title>
-		<script type="module" src="./index.tsx"></script>
-	</head>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
+	<link rel="icon" type="image/png" href="./favicon.png">
+	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+	<title>Contember Admin Sandbox</title>
+	<script type="module" src="./index.tsx"></script>
+</head>
+
 </html>
