feat(admin-sandbox): Add meta attributes

--- a/packages/admin-sandbox/admin/index.html
+++ b/packages/admin-sandbox/admin/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
 	<link rel="icon" type="image/png" href="./favicon.png">
 	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+	<meta name="theme-color" content="white" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="black" media="(prefers-color-scheme: dark)">
 	<title>Contember Admin Sandbox</title>
 	<script type="module" src="./index.tsx"></script>
 </head>
