feat(admin-sandbox): Update layouts

--- a/packages/admin-sandbox/admin/index.html
+++ b/packages/admin-sandbox/admin/index.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1">
 	<link rel="icon" type="image/png" href="./favicon.png">
 	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
-	<meta name="theme-color" content="white" media="(prefers-color-scheme: light)">
-	<meta name="theme-color" content="black" media="(prefers-color-scheme: dark)">
 	<title>Contember Admin Sandbox</title>
+	<meta name="theme-color" content="#F3F3F3" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
+
 	<script type="module" src="./index.tsx"></script>
 </head>
 
